--- a/index.html
+++ b/index.html
@@ -416,6 +416,8 @@
               <a href="https://www.facebook.com/Usma3laa/" target="_blank"><i class="fab fa-facebook-f"></i></a>
               <a href="https://twitter.com/GOAT_GAME3" target="_blank"><i class="fab fa-twitter"></i></a>
               <!-- <a href="https://www.instagram.com/usama_game3/" target="_blank"><i class="fab fa-instagram"></i></a> -->
+              <a href="https://api.whatsapp.com/send?phone=01064392757" target="_blank"><i
+                  class="fab fa-whatsapp"></i></a>
               <a href="https://www.linkedin.com/in/usama-abu-gamea-b564a81a5/" target="_blank"><i
                   class="fab fa-linkedin-in"></i></a>
               <a href="https://github.com/usamagamea" target="_blank"><i class="fab fa-github"></i></a>
