piano app section

--- a/index.html
+++ b/index.html
@@ -152,6 +152,29 @@
           </div>
         </div>
         <!-- portfolio item end -->
+        <!-- portfolio item start -->
+        <div class="portfolio-item" data-category="front-end">
+          <div class="portfolio-item-thumbnail">
+            <img src="img/portfolio/11.png" alt="thumbnail">
+            <button type="button" class="btn more-info-btn">more info</button>
+          </div>
+          <h3 class="portfolio-item-title">Playable Piano</h3>
+          <div class="portfolio-item-details">
+            <div class="description">
+              <p>
+                This is a Playable PIANO | Virtual Piano 🎹 website that is developed using vanilla javascript.
+              </p>
+            </div>
+            <div class="general-info">
+              <p>Created - <span>By Me</span></p>
+              <p>Technologies - <span>Html5, Css3, Javascript</span></p>
+              <p>Role - <span>Front-End</span></p>
+              <p>View Online - <span><a href="https://usamagamea.github.io/Playable-Piano/" target="_blank">Piano
+                    App</a></span></p>
+            </div>
+          </div>
+        </div>
+        <!-- portfolio item end -->
 
         <!-- portfolio item start -->
         <div class="portfolio-item" data-category="angular">
