updating new projects

--- a/index.html
+++ b/index.html
@@ -175,6 +175,29 @@
           </div>
         </div>
         <!-- portfolio item end -->
+        <!-- portfolio item start -->
+        <div class="portfolio-item" data-category="front-end">
+          <div class="portfolio-item-thumbnail">
+            <img src="img/portfolio/12.png" alt="thumbnail">
+            <button type="button" class="btn more-info-btn">more info</button>
+          </div>
+          <h3 class="portfolio-item-title">Tic Tac Teo</h3>
+          <div class="portfolio-item-details">
+            <div class="description">
+              <p>
+                This is a Tic Tac Teo Game website that is developed using vanilla javascript.
+              </p>
+            </div>
+            <div class="general-info">
+              <p>Created - <span>By Me</span></p>
+              <p>Technologies - <span>Html5, Css3, Javascript</span></p>
+              <p>Role - <span>Front-End</span></p>
+              <p>View Online - <span><a href="https://usamagamea.github.io/Tic-Tac-Toe/" target="_blank">Tic Tac Teo
+                  </a></span></p>
+            </div>
+          </div>
+        </div>
+        <!-- portfolio item end -->
 
         <!-- portfolio item start -->
         <div class="portfolio-item" data-category="angular">
@@ -197,6 +220,31 @@
               <p>Role - <span>Front-End</span></p>
               <p>View Online - <span><a href="https://www.go-care.com/#/auth/landing-page" target="_blank">Go
                     Care</a></span></p>
+            </div>
+          </div>
+        </div>
+        <!-- portfolio item end -->
+        <!-- portfolio item start -->
+        <div class="portfolio-item" data-category="angular">
+          <div class="portfolio-item-thumbnail">
+            <img src="img/portfolio/13.png" alt="thumbnail">
+            <button type="button" class="btn more-info-btn">more info</button>
+          </div>
+          <h3 class="portfolio-item-title">Go Care Refinement</h3>
+          <div class="portfolio-item-details">
+            <div class="description">
+              <p>
+                GoCare refinement with new features , new designs and upgrade versions technologies.
+              </p>
+            </div>
+            <div class="general-info">
+              <p>Created - <span>Adwat Team</span></p>
+              <p>Technologies - <span>scss, Angular 14 ,Symantec HTML , TailwindCSS , DotNet </span> -
+                <span>Angular Material</span> <span>Githup source Control</span> </p>
+              <p>Role - <span>Front-End</span></p>
+              <p>View Online - <span><a href="https://newsalonorg.salonspace1.com/auth/login#/auth/signup"
+                    target="_blank">
+                    Go Care</a></span></p>
             </div>
           </div>
         </div>
