--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
             </p>
           </div>
           <div class="contact-info-item">
-            <p>email me on : <span class="mail">osamagamea44@gmail.com</span></p>
+            <p>email me on : <span class="mail">seniorusamagamea@gmail.com</span></p>
           </div>
           <div class="contact-info-item">
             <p class="social-links">
