--- a/index.html
+++ b/index.html
@@ -275,6 +275,30 @@
         </div>
         <!-- portfolio item end -->
 
+        <!-- portfolio item start -->
+        <div class="portfolio-item" data-category="angular">
+          <div class="portfolio-item-thumbnail">
+            <img src="img/portfolio/14.png" alt="thumbnail">
+            <button type="button" class="btn more-info-btn">more info</button>
+          </div>
+          <h3 class="portfolio-item-title">GPI-Meters</h3>
+          <div class="portfolio-item-details">
+            <div class="description">
+              <p>
+                A prepaid meter is a digital electronic meter to measure electrical energy consumed at low voltage and
+                direct connection within an establishment or business.
+              </p>
+            </div>
+            <div class="general-info">
+              <p>Created - <span>GPI Team</span></p>
+              <p>Technologies - <span>Html5, CSS3 , Bootstrap , Angular JS , LinQ - Dot net - Entity framework </span>
+                - <span>Team foundation Server devops source control</span></p>
+              <p>Role - <span>Full-Stack</span></p>
+              <p>private server </p>
+            </div>
+          </div>
+        </div>
+        <!-- portfolio item end -->
 
         <!-- portfolio item start -->
         <div class="portfolio-item" data-category="angular">
