--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
             , <span>css3</span> , <span>typescript</span> and
             <span>angular+8</span>. check out my latest work on tne <a href="#portfolio" class="link-item">portfolio
               page</a>. Want to talk about a project? You can get in touch with me.
-            <a href="#contact" class="link-item">here</a> </p>
+            <a href="#contact" class="link-item">here</a>
+          </p>
           <h2>resuming skills </h2>
           <div class="skills">
             <div class="skill-item">html</div>
@@ -216,7 +217,8 @@
             <div class="general-info">
               <p>Created - <span>Adwat Team</span></p>
               <p>Technologies - <span>scss, Angular 12 ,ngx libraries toaster localizations , bootstrap </span> -
-                <span>Metronic</span> <span>TFS source Control</span> </p>
+                <span>Metronic</span> <span>TFS source Control</span>
+              </p>
               <p>Role - <span>Front-End</span></p>
               <p>View Online - <span><a href="https://www.go-care.com/#/auth/landing-page" target="_blank">Go
                     Care</a></span></p>
@@ -240,7 +242,8 @@
             <div class="general-info">
               <p>Created - <span>Adwat Team</span></p>
               <p>Technologies - <span>scss, Angular 14 ,Symantec HTML , TailwindCSS , DotNet </span> -
-                <span>Angular Material</span> <span>Githup source Control</span> </p>
+                <span>Angular Material</span> <span>Githup source Control</span>
+              </p>
               <p>Role - <span>Front-End</span></p>
               <p>View Online - <span><a href="https://newsalonorg.salonspace1.com/auth/login#/auth/signup"
                     target="_blank">
@@ -293,6 +296,31 @@
               <p>Created - <span>GPI Team</span></p>
               <p>Technologies - <span>Html5, CSS3 , Bootstrap , Angular JS , LinQ - Dot net - Entity framework </span>
                 - <span>Team foundation Server devops source control</span></p>
+              <p>Role - <span>Full-Stack</span></p>
+              <p>private server </p>
+            </div>
+          </div>
+        </div>
+        <!-- portfolio item end -->
+
+        <!-- portfolio item start -->
+        <div class="portfolio-item" data-category="angular">
+          <div class="portfolio-item-thumbnail">
+            <img src="img/portfolio/16.png" alt="thumbnail">
+            <button type="button" class="btn more-info-btn">more info</button>
+          </div>
+          <h3 class="portfolio-item-title">GPI-Meters Renaissance</h3>
+          <div class="portfolio-item-details">
+            <div class="description">
+              <p>
+                A prepaid meter is a digital electronic meter to measure electrical energy consumed at low voltage and
+                direct connection within an establishment or business.
+              </p>
+            </div>
+            <div class="general-info">
+              <p>Created - <span>GPI Team</span></p>
+              <p>Technologies - <span>Html5, CSS3 , Bootstrap , Angular 17 , LinQ - Dot net - Entity framework </span>
+                - <span>Githup source control</span></p>
               <p>Role - <span>Full-Stack</span></p>
               <p>private server </p>
             </div>
@@ -399,7 +427,8 @@
             <div class="general-info">
               <p>Created - <span>Adwat Team</span></p>
               <p>Technologies - <span> scss, Angular12 ,ngx libraries toaster localizations , bootstrap </span> -
-                <span>Metronic</span> <span>TFS source Control</span></p>
+                <span>Metronic</span> <span>TFS source Control</span>
+              </p>
               <p>Role - <span>angular</span></p>
               <p>View Online - <span><a href="https://systemcmds.salonspace1.com/#/auth/login"
                     target="_blank">CEM</a></span></p>
@@ -510,7 +539,7 @@
               <span>find me on : </span>
               <a href="https://www.facebook.com/Usma3laa/" target="_blank"><i class="fab fa-facebook-f"></i></a>
               <a href="https://twitter.com/GOAT_GAME3" target="_blank"><i class="fab fa-twitter"></i></a>
-              <!-- <a href="https://www.instagram.com/usama_game3/" target="_blank"><i class="fab fa-instagram"></i></a> -->
+
               <a href="https://wa.me/01064392757" target="_blank"><i class="fab fa-whatsapp"></i></a>
               <a href="https://www.linkedin.com/in/usama-gamea-b564a81a5/" target="_blank"><i
                   class="fab fa-linkedin-in"></i></a>
