--- a/index.html
+++ b/index.html
@@ -288,8 +288,9 @@
           <div class="portfolio-item-details">
             <div class="description">
               <p>
-                A prepaid meter is a digital electronic meter to measure electrical energy consumed at low voltage and
-                direct connection within an establishment or business.
+                Dashboard Panel for GPI-Meters. It is a project of GPI company with Angular JS and .Net framework is a
+                system for managing meters by handle charging and consumptions of meters and also generate reports of
+                consumption and charging etc.
               </p>
             </div>
             <div class="general-info">
@@ -313,8 +314,9 @@
           <div class="portfolio-item-details">
             <div class="description">
               <p>
-                A prepaid meter is a digital electronic meter to measure electrical energy consumed at low voltage and
-                direct connection within an establishment or business.
+                Dashboard Panel for GPI-Meters. It is a project of GPI company with Renaissance Angular v17 and .Net
+                core is a system for managing meters by handle charging and consumptions of meters and also generate
+                reports of consumption and charging etc.
               </p>
             </div>
             <div class="general-info">
@@ -354,6 +356,30 @@
         </div>
         <!-- portfolio item end -->
 
+        <!-- portfolio item start -->
+        <div class="portfolio-item" data-category="front-end">
+          <div class="portfolio-item-thumbnail">
+            <img src="img/portfolio/18.png" alt="thumbnail">
+            <button type="button" class="btn more-info-btn">more info</button>
+          </div>
+          <h3 class="portfolio-item-title">DaLaL School</h3>
+          <div class="portfolio-item-details">
+            <div class="description">
+              <p>
+                School Guide - Dashboard Panel for DaLaL School in Jordan based on Laravel and AngularJS - MVC .
+              </p>
+            </div>
+            <div class="general-info">
+              <p>Created - <span>By GridApps Team</span></p>
+              <p>Technologies - <span>Html, Css , AngularJS - MVC - PHP - Laravel</span> - <span> CPanel Server</span>
+              </p>
+              <p>Role - <span>Front-End</span></p>
+              <p>View Online - <span><a href="https://dallal.xyz/" target="_blank">DaLaL School</a></span>
+              </p>
+            </div>
+          </div>
+        </div>
+        <!-- portfolio item end -->
         <!-- portfolio item start -->
         <div class="portfolio-item" data-category="front-end">
           <div class="portfolio-item-thumbnail">
